# wacksy

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  README.md  requirements.txt  wacz_example.wacz
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml
examples/: create_datapackage.rs  create_index.rs  create_wacz.rs  warc_example.warc
src/: datapackage.rs  indexer.rs  lib.rs  zip_dir.rs
src/indexer/: cdxj_index.rs  cdxj_index_errors.rs  indexing_errors.rs  mod.rs  page_record.rs  record_content_type.rs  record_digest.rs  record_status.rs  record_timestamp.rs  record_url.rs  warc_filename.rs
tests/: index.cdxj  integration_test.rs  requirements.txt
tests/wacz_example/: datapackage-digest.json  datapackage.json
tests/wacz_example/indexes/: index.cdxj
tests/wacz_example/pages/: pages.jsonl
