[package]
name = "wacksy"
version = "0.0.1-alpha"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/extua/wacksy"
description = "Experimental library for writing WACZ achives."
keywords = ["save-the-internet", "web-archive", "wacz", "warc", "cdxj"]
categories = ["encoding"]

[dependencies]
chrono = { version = "0.4.41", features = ["alloc"] }
httparse = "1.10.1"
libflate = "1"
rawzip = "0.1.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
url = "2.5.4"
warc = { version = "=0.3.3", features = ["gzip",] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
cargo = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }
nursery = { level = "warn", priority = 0 }
needless_return = { level = "allow", priority = 1 }
# implicit_return = "warn"
question_mark_used = { level = "allow", priority = 1 }