[package]
name = "wacksy"
version = "0.0.2"
edition = "2024"
rust-version = "1.87"
license = "MIT"
repository = "https://github.com/bodleian/wacksy"
description = "Experimental library for writing WACZ achives."
keywords = ["save-the-internet", "web-archive", "wacz", "warc", "cdxj"]
categories = ["encoding"]

[dependencies]
chrono = { version = "0.4.41", features = ["alloc", "serde"] }
httparse = "1.10.1"
libflate = "1"
rawzip = "0.4.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
surt-rs = "0.1.3"
url = { version = "2.5.4", features = ["serde"] }
warc = { version = "=0.3.3", features = ["gzip"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# enable warnings for main lint groups
cargo = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }
nursery = { level = "warn", priority = 0 }
# consistent explicit returns
implicit_return = { level = "warn", priority = 1 }
needless_return = { level = "allow", priority = 1 }
# instead of opting-out of restriction lints,
# I should pick the ones I want to actually apply
redundant_else = { level = "allow", priority = 1 }
question_mark_used = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
std_instead_of_core = { level = "allow", priority = 1 }
# unwrap_used = { level = "warn", priority = 1 }
missing_assert_message = { level = "warn", priority = 1 }
min_ident_chars = { level = "warn", priority = 1 }
unused_trait_names = { level = "warn", priority = 1 }

[profile.release]
# magic incantations to produce speedier release builds
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"